# xray-vpn

./: .dockerignore  .gitignore  Dockerfile  EXAMPLE.md  QUICK_START.md  README.md  USAGE.md  deploy.sh  docker-compose.yml  pyproject.toml  test_connections.sh
docs/: architecture.md  nginx-proxy-architecture.md  secret-config-page.md  templates.md
docs/en/: EXAMPLE.md  QUICK_START.md  README.md  USAGE.md  architecture.md  nginx-proxy-architecture.md  secret-config-page.md  templates.md
docs/ru/: EXAMPLE.md  QUICK_START.md  README.md  USAGE.md  architecture.md  nginx-proxy-architecture.md  secret-config-page.md  templates.md
scripts/: diagnose-ssl.sh  install.sh  setup-ssl.sh  test-fixes.sh  test_config.sh  test_connections.sh
src/: __init__.py  config_generator.py  key_generator.py  main.py  utils.py
templates/: client_trojan_grpc.json.j2  client_trojan_ws.json.j2  client_vless_grpc.json.j2  client_vless_ws.json.j2  client_vmess_grpc.json.j2  client_vmess_ws.json.j2  config_page.html.j2  demo_site.conf.j2  env.j2  env_multi.j2  index.html.j2  nginx.conf.j2  nginx_custom.conf.j2  nginx_default.conf.j2  nginx_domain.conf.j2  robots.txt.j2  xray_client.json.j2  xray_server.json.j2  xray_server_multi.json.j2
